# Protocolo-MORPHEUS

./: README.md
OSINT Tool/: LICENSE  README.md  morpheus.py  pyproject.toml  requirements.txt
OSINT Tool/morpheus/: __init__.py
OSINT Tool/morpheus/core/: __init__.py  config.py  engine.py  logger.py
OSINT Tool/morpheus/modules/: __init__.py  corporate.py  identity.py  surveillance.py
OSINT Tool/morpheus/utils/: __init__.py  http.py  report.py
